--- a/webserver/public/home.css
+++ b/webserver/public/home.css
@@ -7,6 +7,41 @@ html, body {
     margin: 0;
 }
 
+body {
+    background-color: #333;
+    color: #fff;
+    font-family: Verdana, sans-serif;
+}
+
+a {
+    color: #ff006e;
+}
+
+a:hover {
+    color: #ff82b8;
+}
+
+#reference {
+    color: #fff !important;
+}
+
+
+.nocolor {
+    color: #fff;
+}
+
+#secret {
+    display: none;
+}
+
+#reference:hover + #secret {
+    display: inline;
+}
+
+h1 {
+    font-size: x-large;
+}
+
 .page-container {
     display: flex;
     flex-direction: column;
@@ -15,6 +50,8 @@ html, body {
 
 .page-header {
     flex: 0 0 auto;
+    background-color: #111;
+    text-align: center;
 }
 
 .page-content {
@@ -29,12 +66,20 @@ html, body {
     min-height: 400px;
 }
 
+.page-footer {
+    flex: 0 0 auto;
+    background-color: #111;
+    padding: 10px;
+}
+
 .container {
     container-type: size;
     container-name: resize-box;
     overflow: hidden;
     width: 100%;
     height: 100%;
+    text-align: center;
+    align-content: center;
 }
 
 .embed {
@@ -72,7 +117,7 @@ html, body {
     height: 100%;
     width: min(50%,500px);
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     top: 0;
     right: 0;
     transform: translateX(100%) translateX(-50px);
@@ -99,12 +144,86 @@ html, body {
 .sidepanel .content .items {
     flex: 1 1 auto;
     overflow-x: scroll;
+    container-name: itembox;
 }
 
-img {
-    pointer-events: none
+.items p {
+    text-align: left;
+    font-size: large;
+    margin: 0 40px 0 20px;
+    color: #888;
+    position: relative;
+    top: 10px;
 }
 
+.items button {
+    font-size: large;
+    padding: 8px 12px;
+    border-radius: 5px;
+    border: none;
+    background-color: #EEE;
+    text-decoration: none;
+    transition: 0.2s;
+}
+
+.broken {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    transform: translate(-50%, -50%) rotate(-10deg);
+}
+
+.items button:hover {
+    background-color: #CCC;
+}
+
+.items button:disabled,button[disabled] {
+    background-color: #333;
+}
+
+.brokenText {
+    position: relative;
+    font-size: 4vw;
+}
+
+#pageInGame img,p {
+    pointer-events: none;
+    user-select: none;
+}
+
+#cannotPlaceItems {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0008;
+    z-index: 9;
+}
+
+.warning {
+    display: inline-block;
+    line-height: 50px;
+    background-color: #000A;
+    border-radius: 15px;
+    padding: 15px;
+    margin-top: 10px;
+    z-index: 10;
+    vertical-align: middle;
+}
+
+.warning img {
+    position: relative;
+    display: inline;
+    width: 50px;
+    vertical-align: middle;
+}
+
+.warning p {
+    display: inline;
+    vertical-align: middle;
+}
 
 /* Position and style the close button (top right corner) */
 .sidepanel .togglebutton {
@@ -139,6 +258,8 @@ img {
     display: grid;
     grid-gap: 10px;
     justify-content: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .item img {
@@ -154,5 +275,10 @@ img {
     position: relative;
     left: 50%;
     transform: translate(-50%,0);
+}
+
+.item div {
+    position: relative;
+    overflow: hidden;
 }
 
