--- a/webserver/views/home.ejs
+++ b/webserver/views/home.ejs
@@ -42,9 +42,12 @@
 						<div class="content">
 							<div class="header">
 								<p id="coin-count">1000 &#x1FA99;</p>
+								<span>
+									<button id="show-purchasableOnly" onclick="togglePurchasableOnly()">Purchasable Only</button>
+								</span>
 							</div>
 							<div class="items">
-								<p id="categoryTemplate" class="hidden">Category</p>
+								<p id="categoryTemplate" class="label hidden">Category</p>
 								<div id="itemTemplate" class="item hidden">
 									<img src="/placeables/Block.png" />
 									<button>10 &#x1FA99;</button>
