--- a/webserver/views/home.ejs
+++ b/webserver/views/home.ejs
@@ -26,6 +26,11 @@
 					<p style="color: #282828">(Maybe take the time to watch the funny streamer...)</p>
 				</div>
 
+				<div id="pageWaitingForHost" class="container hidden">
+					<p>You have connected to the room, but no one is hosting in this room...</p>
+					<p>Please wait for a host to connect</p>
+				</div>
+
 				<div id="pageInGame" class="container hidden">
 					<div id="wrapper" class="embed">
 						<div id="placeables">
@@ -59,7 +64,8 @@
 				</div>
 			</div>
 			<div class="page-footer">
-				Made by <a href="https://github.com/ipodtouch0218">ipodtouch0218</a>, with <a id="reference" class="nocolor">love.</a><p id="secret"> (The normal kind, not L&Ouml;VE...)</p>
+				<span>Made by <a href="https://github.com/ipodtouch0218">ipodtouch0218</a>, with <a id="reference" class="nocolor">love.</a><p id="secret"> (The normal kind, not L&Ouml;VE...)</p></span>
+				<span class="right-aligned">Source code available <a href="https://github.com/ipodtouch0218/UltimateCrowdControlHorse">on GitHub</a></span>
 			</div>
 		</div>
 
