--- a/webserver/public/home.css
+++ b/webserver/public/home.css
@@ -11,6 +11,8 @@ body {
     background-color: #333;
     color: #fff;
     font-family: Verdana, sans-serif;
+    overflow: hidden;
+    touch-action: manipulation;
 }
 
 a {
@@ -38,6 +40,12 @@ h1 {
     text-align: center;
     vertical-align: middle;
     width: 100%;
+    height: 25px;
+    font-size: x-small;
+}
+
+.page-header img {
+    height: 100%;
 }
 
 .page-header > span {
@@ -63,7 +71,7 @@ h1 {
 
 .page-footer {
     flex: 0 0 auto;
-    display: flex;
+    display: none;
     justify-content: space-between;
     background-color: #111;
     padding: 10px;
@@ -108,6 +116,30 @@ h1 {
     margin: auto;
 }
 
+#previewControls {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    background-color: #00000066;
+}
+
+#previewControls button {
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    font-size: initial;
+    pointer-events: initial;
+}
+
+#previewControls .confirm {
+    background-color: darkolivegreen;
+}
+
+#previewControls .cancel {
+    background-color: darkred;
+}
+
 #levelBackground {
     width: 100%;
     object-fit: fill;
@@ -116,7 +148,7 @@ h1 {
 /* The sidepanel menu */
 .sidepanel {
     height: 100%;
-    width: min(50%,500px);
+    width: min(33%,500px);
     position: fixed;
     z-index: 20;
     top: 0;
@@ -147,9 +179,41 @@ h1 {
 }
 
 .sidepanel .content .header {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 5px;
+
+    align-items: center;
+    justify-content: center;
+    margin: 0px 20px;
+
     text-align: center;
-    font-size: x-large;
+    font-size: small;
     padding-bottom: 10px;
+
+    height: 40px;
+}
+
+#show-purchasableOnly {
+    min-width: 10px;
+}
+
+@media (min-height: 500px) {
+    .sidepanel {
+        width: min(40%,500px);
+    }
+    .sidepanel .content .header {
+        height: 82px;
+        font-size: x-large;
+    }
+    .page-footer {
+        display: flex;
+    }
+    .page-header {
+        height: 50px;
+        font-size: initial;
+    }
 }
 
 .sidepanel .content .items {
@@ -238,7 +302,7 @@ h1 {
 
 /* Position and style the close button (top right corner) */
 .sidepanel .togglebutton {
-    position: absolute;
+    position: fixed;
     transform: translate(0, -50%);
     top: 50%;
     left: -50px;
@@ -258,14 +322,13 @@ h1 {
 }
 
 .openbtn:hover {
-    background-color: #444;
+    background-color: #444 !important;
 }
 
-
 .item {
-    background-color: #666;
+    background-color: #444;
     padding: 10px;
-    margin: 20px 20px 20px 20px;
+    margin: 20px;
     display: grid;
     grid-gap: 10px;
     justify-content: center;
